fixed alignment of pictures

--- a/index.css
+++ b/index.css
@@ -109,13 +109,16 @@ p {
     color: cornflowerblue;
 }
 figure.poster {
-    margin: 0;
-    padding: 1.2em;
+    margin: 10px;
+    padding: 5px;
     float: right;
+    border: solid 1px;
+    border-radius: 10px;
 }
-/*figure.poster img {
-    width: 100%;
-}*/
+figure.poster img {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
 figcaption.poster {
     font-size: 1.5rem;
 }
@@ -162,7 +165,7 @@ div.gallary {
     margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    justify-content: center;
 }
 div.gallary figure {
     margin:10px;
@@ -189,11 +192,7 @@ figure figcaption {
 figure a {
     text-decoration: none;
 }
-figure.poster {
-    margin: 10px;
-    padding: 5px;
-    border: solid 1px;
-}
+
 /* Behind the Scenes Tab */
 .behind {
     text-align: center;
